<resources>
    <string name="app_name">H5Demo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="action_settings">Settings</string>

    <string name="demo_label_base_map">地图展示:BasicMapActivity</string>
    <string name="demo_desc_base_map">在Activity中加载地图</string>
    <string name="demo_label_map_fragment">在fragment中使用地图:MapFragmentActivity</string>
    <string name="demo_desc_map_fragment">使用地图SDK自带的SupportMapFragment展示地图</string>
    <string name="demo_label_map_options">地图初始化设置:MapOptionsActivity</string>
    <string name="demo_desc_map_options">设置地图的初始状态及地图创建销毁示意</string>
    <string name="demo_label_map_type">地图类型:MapTypeActivity</string>
    <string name="demo_desc_map_type">实时路况、卫星图层的展示</string>
    <string name="demo_label_ui_setting">地图UI设置:MapSettingActivity</string>
    <string name="demo_desc_ui_setting">设置地图的缩放、手势、内建控件</string>
    <string name="demo_label_map_control">地图控制:MapControlActivity</string>
    <string name="demo_desc_map_control">地图的移动、动画、图标的位置、回调的使用</string>
    <string name="demo_label_map_polyline">折线:PolylineActivity</string>
    <string name="demo_desc_map_polyline">折线的相关操作</string>
    <string name="demo_label_map_polygon">多边形:PolygonActivity</string>
    <string name="demo_desc_map_polygon">多边形的相关操作</string>
    <string name="demo_label_map_circle">圆:CircleActivity</string>
    <string name="demo_desc_map_circle">圆的相关操作</string>
    <string name="demo_label_marker">标注物:MarkerActivity</string>
    <string name="demo_desc_marker">添加标志物及其操作</string>
    <string name="demo_label_map_location">地图定位图层的使用:MapLocationActivity</string>
    <string name="demo_desc_map_location">定位控件的使用</string>
    <string name="demo_label_map_projection">坐标投影：MapProjectionActivity</string>
    <string name="demo_desc_map_projection">展示projection类的坐标转换功能及地图中心坐标获取</string>
    <string name="demo_label_off_line_map">离线地图：OffLineMapActivity</string>
    <string name="demo_desc_off_line_map">离线地图的使用及下载</string>
    <string name="demo_label_heat_map">热力图：HeatMapActivity</string>
    <string name="demo_desc_heat_map">展示地图的热力图功能</string>


    <string name="demo_label_search">地图中使用搜索SDK</string>
    <string name="demo_desc_search">搜索SDK与地图的结合使用</string>
    <string name="demo_label_road_plan">路线规划</string>
    <string name="demo_desc_road_plan">路线规划的相关使用</string>

    <string name="heat_map_add">添加热力图</string>
    <string name="heat_map_remove">删除热力图</string>

    <string name="offline_map_state_download">下载</string>
    <string name="offline_map_state_update">更新</string>
    <string name="offline_map_state_pause">暂停</string>
    <string name="offline_map_state_continue">继续</string>
    <string name="offline_map_state_delete">删除</string>
    <string name="offline_map_state_installing">安装中</string>
    <string name="offline_map_state_waitting">等待</string>


    <string name="controll_map_arrow_up">\u2191</string>
    <string name="controll_map_arrow_down">\u2193</string>
    <string name="controll_map_arrow_left">\u2190</string>
    <string name="controll_map_arrow_right">\u2192</string>
    <string name="controll_map_zoom_in">\u002b</string>
    <string name="controll_map_zoom_out">\u002d</string>
    <string name="controll_map_roll_map_panel">地图卷动控制</string>
    <string name="controll_map_cust_zoom">自制缩放控件</string>
    <string name="controll_map_callback_log">回调信息</string>
    <string name="controll_map_set_logo_position">设置logo位置</string>
    <string name="controll_map_logo_bottom_padding">距离底部像素</string>
    <string name="controll_map_logo_left_padding">距离左侧像素</string>
    <string name="controll_map_logo_refresh">刷新logo</string>
    <string name="controll_map_input_range">输入范围0~1</string>
    <string name="controll_map_set_camera">设置地图Camera</string>
    <string name="controll_map_animate_to_yk">移动到银科</string>
    <string name="controll_map_animate_to_sigma">移动到西格玛</string>
    <string name="controll_map_animate">地图移动动画</string>
    <string name="controll_map_stop_animate">停止动画</string>
    <string name="controll_map_hadle_text">控制面板</string>

    <string name="add_polyline">添加折线</string>
    <string name="remove_polyline">删除折线</string>
    <string name="polyline_width">折线宽</string>
    <string name="polyline_transparent">透明度</string>

    <string name="add_polygon">添加多边形</string>
    <string name="remove_polygon">删除多边形</string>
    <string name="geodesic">测地线</string>
    <string name="stroke_width">描边宽</string>
    <string name="transparency">透明度</string>
    <string name="hue">填充色</string>

    <string name="add_circle">添加圆</string>
    <string name="remove_circle">删除圆</string>

    <string name="add_map">添加地图</string>
    <string name="remove_map">删除地图</string>

    <string name="visible_region">可见区域</string>
    <string name="center_coordinate">中心点坐标</string>

    <string name="satellite_map">卫星图</string>
    <string name="real_time_traffic">实时交通</string>

    <string name="support_map_fragment">sdk提供的mapfragment</string>
    <string name="cust_map_fragment">自定义的mapfragment</string>

    <string name="screen_shot">截屏</string>
    <string name="reset">重置</string>
    <string name="clean">清除</string>

    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>

    <string name="type_in_city_name">请输入要查找的城市名称</string>
    <string name="search">搜索</string>
    <string name="downloaded_city">已下载的城市</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
