<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <fragment 
        android:id="@+id/frag_map"
        class="com.tencent.tencentmap.mapsdk.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    
    <Button 
        android:id="@+id/btn_screen_shot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/screen_shot"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        
        <Button 
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"/>
        <Button 
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clean"/>
    </LinearLayout>


    <RadioGroup
        android:id="@+id/custom_info_window_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bg_panel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true">
        <RadioButton
            android:id="@+id/default_info_window"
            android:checked="true"
            android:text="@string/default_info_window"/>
        <RadioButton
            android:id="@+id/custom_info_contents"
            android:text="@string/custom_info_contents"/>
        <RadioButton
            android:id="@+id/custom_info_window"
            android:text="@string/custom_info_window"/>
    </RadioGroup>

</RelativeLayout>
