<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment
        android:id="@+id/frag_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        class="com.tencent.tencentmap.mapsdk.maps.SupportMapFragment" />

    <LinearLayout
        android:id="@+id/ll_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#11444444"
        android:orientation="vertical"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_scroll_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_direction"
            android:clickable="true"
            android:onClick="onUpClicked"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/controll_map_arrow_up"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_direction"
            android:clickable="true"
            android:onClick="onDownClicked"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/controll_map_arrow_down"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_direction"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onLeftClicked"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/controll_map_arrow_left"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_direction"
            android:clickable="true"
            android:onClick="onRightClicked"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/controll_map_arrow_right"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_cust_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_direction"
            android:clickable="true"
            android:onClick="onZoomInClicked"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/controll_map_zoom_in"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_direction"
            android:clickable="true"
            android:onClick="onZoomOutClicked"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/controll_map_zoom_out"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="horizontal" />

    <SlidingDrawer
        android:id="@+id/sliding_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:content="@+id/ll_content"
        android:handle="@+id/iv_handle"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_panel"
            android:clickable="true"
            android:longClickable="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/cb_scroll_by"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/controll_map_roll_map_panel" />

                <CheckBox
                    android:id="@+id/cb_cust_zoom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/controll_map_cust_zoom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/cb_log"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controll_map_callback_log" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controll_map_set_logo_position"
                android:textColor="@android:color/white" />
 
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_bottom_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/controll_map_logo_bottom_padding"
                    android:inputType="number"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_letf_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/controll_map_logo_left_padding"
                    android:inputType="number"
                    android:textSize="15sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSetLogoMarginClicked"
                    android:text="@string/controll_map_logo_refresh" />
            </LinearLayout> -->

            <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/sp_margin_rate_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />

                <EditText
                    android:id="@+id/et_margin_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/controll_map_input_range"
                    android:inputType="numberDecimal"
                    android:textSize="15sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSetLogoMarginRateClicked"
                    android:text="@string/controll_map_logo_refresh" />
            </LinearLayout> -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controll_map_set_camera"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onAnimatToYinkeClicked"
                    android:text="@string/controll_map_animate_to_yk" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onAnimatToSigemaClicked"
                    android:text="@string/controll_map_animate_to_sigma" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/cb_map_animation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/controll_map_animate" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onStopAnimationClicked"
                    android:text="@string/controll_map_stop_animate" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/iv_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/thumb_horizontal"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:longClickable="true"
            android:text="@string/controll_map_hadle_text"
            android:textColor="@android:color/black" />
    </SlidingDrawer>

</RelativeLayout>
